tests/snapshots/snapshot_golden_comprehensive__min_support_emulated.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "MinSupport::Emulated"
---
"emulated"
