tests/snapshots/snapshot_golden_comprehensive__pipeline_event_stream_jsonl.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: output
---
{"t":"event","ref_id":"run-001","event":{"ts":"2025-07-01T12:00:00Z","type":"run_started","message":"starting"}}
{"t":"event","ref_id":"run-001","event":{"ts":"2025-07-01T12:00:00Z","type":"assistant_delta","text":"Hello "}}
{"t":"event","ref_id":"run-001","event":{"ts":"2025-07-01T12:00:00Z","type":"assistant_delta","text":"world!"}}
{"t":"event","ref_id":"run-001","event":{"ts":"2025-07-01T12:05:00Z","type":"run_completed","message":"done"}}
