tests/snapshots/snapshot_golden_comprehensive__pipeline_execution_mode_passthrough.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "ExecutionMode::Passthrough"
---
"passthrough"
