tests/snapshots/snapshot_golden_comprehensive__pipeline_fatal_session.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: output
---
{"t":"hello","contract_version":"abp/v0.1","backend":{"id":"mock","backend_version":null,"adapter_version":null},"capabilities":{},"mode":"mapped"}
{"t":"run","id":"fail-001","work_order":{"id":"00000000-0000-4000-8000-000000000002","task":"Hello world","lane":"patch_first","workspace":{"root":".","mode":"pass_through","include":[],"exclude":[]},"context":{"files":[],"snippets":[]},"policy":{"allowed_tools":[],"disallowed_tools":[],"deny_read":[],"deny_write":[],"allow_network":[],"deny_network":[],"require_approval_for":[]},"requirements":{"required":[]},"config":{"model":null,"vendor":{},"env":{},"max_budget_usd":null,"max_turns":null}}}
{"t":"fatal","ref_id":"fail-001","error":"Out of memory","error_code":"BACKEND_CRASHED"}
