tests/snapshots/snapshot_golden_comprehensive__policy_profile_approval_only.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": [
    "execute",
    "delete",
    "bash"
  ]
}
