tests/snapshots/snapshot_golden_comprehensive__policy_profile_network_only.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [
    "api.example.com",
    "cdn.example.com"
  ],
  "deny_network": [
    "*.evil.com"
  ],
  "require_approval_for": []
}
