tests/snapshots/snapshot_golden_comprehensive__policy_profile_paths_only.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [
    ".env",
    "secrets/**"
  ],
  "deny_write": [
    "Cargo.lock",
    "*.toml"
  ],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
